# XorOS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.txt
os/: .clangd  CMakeLists.txt  README.md
os/include/: clint.h  csr.h  ecall.h  kalloc.h  pipe.h  process.h  scheduler.h  spinlock.h  trap.h  uart.h  vmem.h
os/src/: boot.S  clint.c  driver_hello_world.c  kalloc.c  kernel_main.c  pipe.c  sched_switch.S  scheduler.c  trap.S  trap.c  uart.c  vmem.c
os/tests/: test_ecall.c
scripts/: merge_compile_commands.py
